4.0.0
Admin:
 * Removed tiny-mce editor support (resulting HTML were a mess)

Dependencies:
 * Now requires Django 1.2
 * Now requires South 0.7**
 * Now requires django-uni-form**
 * Removed requirement for sqlalchamy
   ** provided in the contrib folder, so no external installation is required

3.0.0
 * Improved support for additional languages.
 * Improved selection of date of birth.
 * Added country field to member profiles.
 * Removed dependency of textile markup, now using pure html.
 * Added option to send e-mails to users which have selected an option in a group.
 * Simplified setting files.
 * Moved some dependencies into a contrib folder for easier installation.
 * Added outgoing mail query in order to better support mass e-mails.
 * Added dynamic menu to the admin in order to generate the menu based on installed functionality
 * Added statistics for user age and join date.
 * Added basic workflow concept to payment registration. Initially with e-mail notification on registration.
 * Forbedret brugervenlighed af invoice rapporten.

2.2.0
 * Added pyton library to sso api.
 * Added roundup sso integration.
 * Added group information to sso api and php library.
 * Initial release of selvbetjening notify with support for pushing user groups to concrete5

2.1.5

 * Fixed error in validation of eventregistrations when reselecting frozen options.
 * Improved payment and invoice revision admin interface.

2.1.4

 * Fixed logical error in calculating invoice state.

2.1.3

 * Fixed error when displaying statistics for attendee selections.

2.1.2

 * Fixed error in internal naming of function for Options.

2.1.1

 * Improved performance for the option administration page.

2.1.0

 * Added invoice page to eventregistration.
 * Various bugfixes and improvements to services plugins.
 * Fixed some missing language files for eventregistration.

2.0.0

 * Added sorting users by age.
 * Removed booking module.
 * Restructured modules into clients, data and viewhelpers.