@@ -1,0 +1,17 @@
+****************
+Concrete5 Notify
+****************
+
+Concrete5 notify modulet integrere cms systemet concrete5 med
+selvbetjening.
+
+Bestemte bruger grupper i selvbetjening bliver synkroniseret med
+grupper i concrete5, således at ændringer i de tilknyttede brugere i
+selvbetjening bliver reflekteret i concrete5.
+
+En selvbetjening gruppe kan derfor være tilknyttet en, og kun en,
+gruppe i concrete5. Gruppe navne synkroniseres ikke mellem de to
+systemer.
+
+Slettes selvbetjening gruppen bliver der ikke ændret noget ved
+concrete5 gruppen.
