@@ -10,7 +10,11 @@ def get_user_data():
             'first_name' : 'test',
             'last_name' : 'test',
             'email' : 'user@example.org',
-            'dateofbirth' : '14-10-1987',
+            'dateofbirth' : '1987-10-14',
+            'street' : 'duck street',
+            'postalcode' : '1000',
+            'city' : 'duck town',
+            'country': 'DK',
             'tos' : True}
 
 def test_user_created(testcase, username):
@@ -27,7 +31,8 @@ class ViewTestCase(TestCase):
         self.user_data = get_user_data()
 
     def test_create_user(self):
-        response = self.client.post(reverse('quickregistration_register'), self.user_data)
+        response = self.client.post(reverse('quickregistration_register'),
+                                    self.user_data)
 
         self.assertEqual(response.status_code, 302) # redirect
 
