@@ -1,6 +1,0 @@
-from selvbetjening.core.selvadmin.admin import site
-
-import models
-
-site.register(models.GroupsMapper)
-
