@@ -7,33 +7,39 @@ from selvbetjening.notify.concrete5.models import C5Group, GroupC5Group, registr
 class Command(BaseCommand):
     help = 'Inspect C5 synchronisation status'
 
+    def output(self, value):
+        if not self._silent:
+            print value
+
     def handle(self, *args, **options):
         groups = Group.objects.all()
+
+        self._silent = 'silent' in args
 
         for listener_id in registry.listeners:
             config = registry.listeners[listener_id]
             database_id = config['database_id']
 
-            print 'Status for %s' % listener_id
+            self.output('Status for %s' % listener_id)
 
             c5groups = C5Group.objects.using(database_id).all()
             synced = GroupC5Group.objects.filter(database_id=database_id)
 
-            print 'Synchronised:'
+            self.output('Synchronised:')
 
             for syncedGroup in synced:
-                print syncedGroup.group.name
+                self.output(syncedGroup.group.name)
 
-            print 'Un-synchronised groups'
+            self.output('Un-synchronised groups')
 
             syncedGroups = [syncedGroup.group for syncedGroup in synced]
             for group in groups:
                 if group not in syncedGroups:
-                    print group.name
+                    self.output(group.name)
 
-            print 'Un-synchronised C5 groups'
+            self.output('Un-synchronised C5 groups')
 
             syncedGroups = [syncedGroup.c5group_id for syncedGroup in synced]
             for c5group in c5groups:
                 if c5group.pk not in syncedGroups:
-                    print c5group.name
+                    self.output(c5group.name)
