@@ -8,33 +8,39 @@ from selvbetjening.notify.proftpd.models import ProftpdGroup, GroupProftpdGroup,
 class Command(BaseCommand):
     help = 'Inspect proftpd sync status'
 
+    def output(self, value):
+        if not self._silent:
+            print value
+
     def handle(self, *args, **options):
         groups = Group.objects.all()
+
+        self._silent = 'silent' in args
 
         for listener_id in registry.listeners:
             config = registry.listeners[listener_id]
             database_id = config['database_id']
 
-            print 'Status for %s' % listener_id
+            self.output('Status for %s' % listener_id)
 
             proftpdGroups = ProftpdGroup.objects.using(database_id).all()
             synced = GroupProftpdGroup.objects.filter(database_id=database_id)
 
-            print 'Synchronised:'
+            self.output('Synchronised:')
 
             for syncedGroup in synced:
-                print syncedGroup.group.name
+                self.output(syncedGroup.group.name)
 
-            print 'Un-synchronised groups'
+            self.output('Un-synchronised groups')
 
             syncedGroups = [syncedGroup.group for syncedGroup in synced]
             for group in groups:
                 if group not in syncedGroups:
-                    print group.name
+                    self.output(group.name)
 
-            print 'Un-synchronised Proftpd groups'
+            self.output('Un-synchronised Proftpd groups')
 
             syncedGroups = [syncedGroup.proftpdgroup_name for syncedGroup in synced]
             for proftpdGroup in proftpdGroups:
                 if proftpdGroup.name not in syncedGroups:
-                    print proftpdGroup.name
+                    self.output(proftpdGroup.name)
