@@ -1,7 +1,7 @@
 from django.conf.urls.defaults import *
 from django.views.generic.simple import redirect_to, direct_to_template
 
-from selvbetjening.clients.profile.views import profile, profile_redirect
+from selvbetjening.clients.profile.views import profile_redirect
 
 import admin
 
@@ -22,8 +22,6 @@ urlpatterns = patterns('',
 
     (r'^api/',
      include('selvbetjening.api.sso.urls')),
-
-    url(r'^profil/$', profile, name='members_profile'),
 
     # Admin urls
     (r'^admin/', include(admin.site.urls)),
